syntax = "proto3";

service QueueService {
    rpc CreateQueue(CreateQueueRequest) returns (CreateQueueResponse) {}
    rpc ListTopics(ListTopicsRequest) returns (ListTopicsResponse) {}
}

message CreateQueueRequest {
    Queue queue = 1;
}

message CreateQueueResponse {
}

message ListTopicsRequest {
}

message ListTopicsResponse {
    repeated string topics = 1;
}

message Queue {
    string topic = 1;
}

service TaskService {
    rpc AddTask(AddTaskRequest) returns (AddTaskResponse) {}
}

message AddTaskRequest {
    Task task = 1;
}

message AddTaskResponse {
}

message Task {
    string id = 1;
    string topic = 2;
    int64 execution_duration_milliseconds = 3;
}
